--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@vue/cli-plugin-pwa": "^5.0.8",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -23,6 +23,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.12",
     "eslint": "^7.32.0",
