changed mobile application short name on manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Pwa English Dictionary",
-    "short_name": "pwa-english-dictionary",
+    "short_name": "ENG DICT",
     "iconPaths": 
         {
             "faviconSVG": "img/icons/favicon.svg",
